# prefab-sentinel

./: .coverage  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  _pf_test_full_coverage.py  pyproject.toml  report_20260327_v085_full_mcp_workflow.md  report_20260430_nadevision_multiplayer_sync.md  report_20260502_nadevision_playback_redesign.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  unity-integration.yml  unity-live-nightly.yml  unity-smoke.yml
config/: patch_plan.example.json
config/bridge_smoke/: avatar_prefab_create.json  world_material_create.json
docs/: IDEAS_AND_ROADMAP.md  ROADMAP_SERENA_FOR_UNITY.md  quarterly_mutmut_report_template.md
knowledge/: avatar-compressor.md  avatar-optimizer.md  copy-scale-adjuster.md  face-emo.md  floor-adjuster.md  kawaii-posing.md  liltoon.md  lilycal-inventory.md  modular-avatar.md  mutmut_mid_tier_sampling.md  ndmf.md  prefab-sentinel-build-from-scratch.md  prefab-sentinel-editor-camera.md  prefab-sentinel-material-operations.md  prefab-sentinel-patch-patterns.md  prefab-sentinel-saveasprefabasset-pitfalls.md  prefab-sentinel-variant-patterns.md  prefab-sentinel-wiring-triage.md  prefab-sentinel-workflow-patterns.md  tex-trans-tool.md  udonsharp-prefab-patterns.md  udonsharp.md  vrc-quest-tools.md  vrcfury.md  vrchat-event-binding.md  vrchat-sdk-avatars.md  vrchat-sdk-base.md  vrchat-sdk-constraints.md  vrchat-sdk-worlds.md  vrchat-shader-development.md  vvmw.md
prefab_sentinel/: __init__.py  __main__.py  asset_file_ops.py  bridge_check.py  bridge_constants.py  bridge_smoke.py  builtin_assets.py  cli.py  contracts.py  csharp_fields.py  csharp_fields_resolve.py  editor_bridge.py  editor_bridge_builders.py  fuzzy_match.py  hierarchy.py  integration_tests.py  json_io.py  material_asset_inspector.py  material_asset_writer.py  material_inspector.py  material_inspector_variant.py  mcp_helpers.py  mcp_server.py  mcp_tools_components.py  mcp_tools_components_copy.py  mcp_tools_editor_advanced.py  mcp_tools_editor_batch.py  mcp_tools_editor_exec.py  mcp_tools_editor_ops.py  mcp_tools_editor_udonsharp.py  mcp_tools_editor_view.py  mcp_tools_editor_write.py  mcp_tools_patch.py  mcp_tools_session.py  mcp_tools_set_property.py  mcp_tools_symbols.py  mcp_tools_validation.py  mcp_validation.py  orchestrator.py  orchestrator_fields.py  (+34 more)
prefab_sentinel/mcp/: prefab_variant.py  reference_resolver.py  runtime_validation.py  serialized_object.py
prefab_sentinel/services/: __init__.py  prefab_variant.py  property_path.py  reference_resolver.py  reference_resolver_snapshots.py  runtime_validation.py  serialized_object.py
scripts/: benchmark_history_to_csv.py  benchmark_refs.py  benchmark_regression_report.py  benchmark_samples.py  bridge_smoke_samples.py  check_bridge_constants.py  check_module_line_limits.py  mutmut_score_report.py  run_unit_tests.py  smoke_summary_to_csv.py  unity_bridge_smoke.py  unity_integration_tests.py
skills/guide/: SKILL.md
skills/knowledge-acquisition/: SKILL.md
skills/prefab-reference-repair/: SKILL.md
skills/udon-log-triage/: SKILL.md
skills/variant-safe-edit/: SKILL.md
tasks/: todo.md
tests/: __init__.py  _assertion_helpers.py  bridge_test_helpers.py  conftest.py  test_asmdef_references.py  test_assertion_density.py  test_assertion_helpers.py  test_asset_file_ops.py  test_auto_refresh.py  test_benchmark_history_to_csv.py  test_benchmark_refs.py  test_benchmark_regression_report.py  test_benchmark_samples.py  test_bridge_check.py  test_bridge_constants_drift.py  test_bridge_constants_sync.py  test_bridge_smoke.py  test_bridge_smoke_samples.py  test_builtin_assets.py  test_canonical_path_documentation.py  test_check_module_line_limits.py  test_class_naming_convention.py  test_cli.py  test_contracts.py  test_csharp_fields.py  test_d1_branch_coverage.py  test_d2_patch_dispatch_executor_revert.py  test_d3_orchestrator_snapshots.py  test_d4_mid_tier_sampling.py  test_default_parameter_boundaries.py  test_editor_bridge.py  test_editor_control_bridge_source.py  test_editor_reflect.py  test_fuzzy_match.py  test_hierarchy.py  test_inspect_wiring_pagination.py  test_integration_tests.py  test_json_io.py  test_knowledge_docs.py  test_material_asset_inspector.py  (+56 more)
tools/: unity_patch_bridge.py
tools/git-hooks/: pre-commit
tools/unity/: PrefabSentinel.Editor.asmdef  PrefabSentinel.EditorBridge.cs  PrefabSentinel.EditorReflectHandler.cs  PrefabSentinel.ReflectTypeResolver.cs  PrefabSentinel.UnityEditorControlBridge.BlendShape.cs  PrefabSentinel.UnityEditorControlBridge.CameraView.cs  PrefabSentinel.UnityEditorControlBridge.Components.cs  PrefabSentinel.UnityEditorControlBridge.ConsoleCapture.cs  PrefabSentinel.UnityEditorControlBridge.Helpers.cs  PrefabSentinel.UnityEditorControlBridge.Hierarchy.cs  PrefabSentinel.UnityEditorControlBridge.HierarchyComponents.cs  PrefabSentinel.UnityEditorControlBridge.MaterialBatch.cs  PrefabSentinel.UnityEditorControlBridge.MaterialQuery.cs  PrefabSentinel.UnityEditorControlBridge.MaterialWrite.cs  PrefabSentinel.UnityEditorControlBridge.Menu.cs  PrefabSentinel.UnityEditorControlBridge.Properties.cs  PrefabSentinel.UnityEditorControlBridge.RunScriptCompile.cs  PrefabSentinel.UnityEditorControlBridge.SaveInstantiate.cs  PrefabSentinel.UnityEditorControlBridge.UdonSharp.cs  PrefabSentinel.UnityEditorControlBridge.UdonSharpAddComponent.cs  PrefabSentinel.UnityEditorControlBridge.UdonSharpFieldWrite.cs  PrefabSentinel.UnityEditorControlBridge.UdonSharpInvocation.cs  PrefabSentinel.UnityEditorControlBridge.UdonSharpListenerWiring.cs  PrefabSentinel.UnityEditorControlBridge.UiElement.cs  PrefabSentinel.UnityEditorControlBridge.cs  PrefabSentinel.UnityIntegrationTests.cs  PrefabSentinel.UnityPatchBridge.cs  PrefabSentinel.UnityRuntimeValidationBridge.cs  PrefabSentinel.VRCSDKUploadHandler.cs
unitytool/: __init__.py  __main__.py  bridge_smoke.py  cli.py  contracts.py  orchestrator.py  patch_plan.py  reporting.py  smoke_batch.py  smoke_history.py
unitytool/mcp/: __init__.py  prefab_variant.py  reference_resolver.py  (+2 more)
(+133 files in other folders)
