[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "prefab-sentinel"
version = "0.5.77"
description = "Prefab Sentinel — Unity Prefab/Scene inspection and editing toolkit."
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.12"]
watch = ["watchfiles>=1.0"]
test = ["unittest-parallel>=1.6,<2"]
lint = ["ruff>=0.8", "mypy>=1.13", "bump-my-version>=0.31"]

[project.scripts]
prefab-sentinel-mcp = "prefab_sentinel.mcp_server:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I", "N"]
ignore = ["E501", "SIM103", "SIM117"]
per-file-ignores = {"scripts/*" = ["E402", "B905"], "tools/*" = ["E402"]}

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "prefab_sentinel.services.serialized_object",
    "prefab_sentinel.services.reference_resolver",
    "prefab_sentinel.services.prefab_variant",
]
disable_error_code = ["arg-type", "index", "assignment", "var-annotated", "no-redef"]

[tool.hatch.build.targets.wheel]
packages = ["prefab_sentinel"]

[tool.bumpversion]
current_version = "0.5.77"
commit = false
tag = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = ".claude-plugin/plugin.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'
