[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "prefab-sentinel"
version = "0.5.163"
description = "Prefab Sentinel — Unity Prefab/Scene inspection and editing toolkit."
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.12"]
watch = ["watchfiles>=1.0"]
test = ["unittest-parallel>=1.6,<2"]
lint = ["ruff>=0.8", "mypy>=1.13", "bump-my-version>=0.31"]

[project.scripts]
prefab-sentinel-mcp = "prefab_sentinel.mcp_server:main"

[tool.pytest.ini_options]
# Custom markers are registered here so pytest does not emit
# ``PytestUnknownMarkWarning`` for them.  See issue #87 for the
# ``unity_live`` harness motivation; issue #167 motivates
# ``source_text_invariant`` for repository-synchrony tests that read the
# original (un-mutated) source tree and therefore contribute no mutant
# detection signal.
markers = [
    "unity_live: test requires a live Unity Editor invocation (UNITYTOOL_UNITY_COMMAND must be set); skipped by default.",
    "source_text_invariant: repository-synchrony test that reads the original (un-mutated) source tree; excluded from the mutmut pytest selection so mutmut runs do not collect it.",
]

[tool.ruff]
target-version = "py311"
line-length = 120
# Issue #166: mutmut copies the audited tree into ``mutants/`` at run
# start; lint must skip that directory so it never produces diagnostics
# from a transient working copy.
extend-exclude = ["mutants/"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I", "N"]
ignore = ["E501", "SIM103", "SIM117"]
per-file-ignores = {"scripts/*" = ["E402", "B905"], "tools/*" = ["E402"]}

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "prefab_sentinel.services.serialized_object",
    "prefab_sentinel.services.reference_resolver",
    "prefab_sentinel.services.prefab_variant",
]
disable_error_code = ["arg-type", "index", "assignment", "var-annotated", "no-redef"]

[tool.hatch.build.targets.wheel]
packages = ["prefab_sentinel"]

[tool.hatch.build.targets.wheel.force-include]
"tools/unity" = "prefab_sentinel/_bridge_files"

[tool.bumpversion]
current_version = "0.5.163"
commit = false
tag = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = ".claude-plugin/plugin.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "tools/unity/PrefabSentinel.UnityEditorControlBridge.cs"
search = 'BridgeVersion = "{current_version}"'
replace = 'BridgeVersion = "{new_version}"'

[tool.mutmut]
# Audited-path scope: the `prefab_sentinel` Python package source root, so
# operational-cadence runs mutate the package as a whole; per-module
# sub-selection is supplied by mutmut command-line invocation rather than
# by this configuration file.  See README.md "Mutation testing" for the
# `uv run mutmut run --max-children 180` invocation form.
paths_to_mutate = ["prefab_sentinel/"]
# Do-not-mutate pattern list: structural noise whose mutations would not
# strengthen the test suite.  Logger-style calls (`logger.info(...)` etc.)
# and triple-quoted-string forms produce equivalent or trivially-killed
# mutants without informing the production-code contract under test.
do_not_mutate = [
    "*logger.*",
    "*log.debug*",
    "*log.info*",
    "*log.warning*",
    "*log.error*",
    "*log.critical*",
    '*"""*',
    "*'''*",
    # Issue #182: three semantically-equivalent mutation patterns over
    # ``ReferenceResolverService`` internal cache state.  Skipping the
    # cache fetch (``_text_cache.get`` returning None instead of the
    # cached value) re-enters the slow path; mutating the GUID-index
    # cache backing field triggers a fresh ``collect_project_guid_index``
    # walk; mutating the cache-invalidation helpers leaves stale entries
    # the next read clears anyway — none of these strengthen the suite.
    "*_text_cache.get*",
    "*_guid_map*",
    "*invalidate_*_cache*",
    # Issue #182: empty-string ``dict.get`` default-equivalence pattern.
    # ``mapping.get("key", "")`` callers commonly chain straight into a
    # ``str`` consumer that treats absent keys and empty values
    # identically, so mutating the empty-string sentinel to a non-empty
    # marker either reproduces the same downstream behaviour (equivalent
    # mutant) or surfaces a contrived sentinel-string difference that
    # does not strengthen the production-code contract under test.
    '*.get("*", "")*',
]
# Test collection in the mutated working directory imports modules from
# ``scripts/`` and ``tools/``; without ``also_copy`` mutmut runs with only
# ``prefab_sentinel/`` available and ``mutmut run`` aborts at collection
# (``ModuleNotFoundError: No module named 'scripts'``).
also_copy = ["scripts/", "tools/", "knowledge/"]
# Issue #167: the source-text invariant tests read the un-mutated
# repository tree and contribute no mutant detection signal; they carry
# the ``source_text_invariant`` pytest marker at module scope and are
# excluded via a single marker filter so adding a new repository-
# synchrony test only requires applying the marker.
pytest_add_cli_args_test_selection = [
    "tests/",
    "-m",
    "not source_text_invariant",
]

[dependency-groups]
dev = [
    "mutmut>=3.5.0",
    "pytest>=9.0.3",
]
